# makudoku-web

./: .gitignore  Cargo.toml  README.md
admin/: index.html  style.css
migrations/: 001_init.sql  002_admin_fields.sql  003_stats.sql
public/: app.js  index.html  style.css
src/: main.rs
