[package]
name = "makudoku-web"
version = "0.1.0"
edition = "2024"

[dependencies]
makudoku = {path="../makudoku"}
anyhow = "1.0.100"
axum = "0.8.7"
serde = { version="1.0.228", features=["derive"] }
serde_json = "1.0.145"
tokio = { version="1.48.0", features=["full"] }
tower-http = { version="0.6.8", features=["fs"] }
sqlx = { version="0.8.6", features=["runtime-tokio", "sqlite", "macros", "migrate"] }
chrono = { version="0.4.42", features=["clock"] }
